--- a/src/ProjectName.Application/GuestBook.Application.csproj
+++ b/src/ProjectName.Application/GuestBook.Application.csproj
@@ -7,6 +7,14 @@
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.0.78" />
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="SecurityCodeScan" Version="3.5.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <PropertyGroup>
