--- a/src/ProjectName.Application/ProjectName.Application.csproj
+++ b/src/ProjectName.Application/ProjectName.Application.csproj
@@ -19,6 +19,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>ProjectName.Application</AssemblyName>
+    <RootNamespace>ProjectName.Application</RootNamespace>
   </PropertyGroup>
 
 </Project>
