--- a/src/ProjectName.Infrastructure/ProjectName.Infrastructure.csproj
+++ b/src/ProjectName.Infrastructure/ProjectName.Infrastructure.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Ardalis.EFCore.Extensions" Version="1.1.0" />
     <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="FluentValidation" Version="9.5.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.2">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -17,6 +18,8 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>ProjectName.Infrastructure</AssemblyName>
+    <RootNamespace>ProjectName.Infrastructure</RootNamespace>
   </PropertyGroup>
 
 </Project>
