--- a/src/ProjectName.Api/ProjectName.Api.csproj
+++ b/src/ProjectName.Api/ProjectName.Api.csproj
@@ -21,6 +21,7 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
         <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="5.1.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="5.0.0" />
         <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.8" />
         <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
         <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
