--- a/src/ProjectName.Application/ProjectName.Application.csproj
+++ b/src/ProjectName.Application/ProjectName.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="dapper" Version="2.0.78" />
+    <PackageReference Include="FluentValidation" Version="9.5.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="SecurityCodeScan" Version="3.5.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
