--- a/src/ProjectName.Web/package.json
+++ b/src/ProjectName.Web/package.json
@@ -13,7 +13,9 @@
     "prettier": "prettier  --write **/*.{ts,tsx,js}",
     "lint:ts": "npm run prettier && eslint --fix 'src/**/*.{ts,tsx}'",
     "lint:scss": "stylelint --fix 'src/**/*.scss'",
-    "lint:types": "tsc -p . --noEmit"
+    "lint:types": "tsc -p . --noEmit",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "husky": {
     "hooks": {
@@ -52,6 +54,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@fluentui/react": "^7.161.0",
     "next": "10.0.3",
     "next-redux-wrapper": "6.0.2",
     "react": "17.0.1",
@@ -64,6 +67,10 @@
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-essentials": "^6.1.20",
+    "@storybook/addon-links": "^6.1.20",
+    "@storybook/react": "^6.1.20",
     "@testing-library/jest-dom": "5.11.8",
     "@testing-library/react": "11.2.2",
     "@types/jest": "25.1.4",
